src/test/resources/valid_programs/assignment_simple.notc
void main() {
    int i = 98287;
    double d = 832.0;
    string s = "mmgr";
    printInt(i);
    printDouble(d);
    printString(s);
}
