src/test/resources/semantic_errors/printDouble_with_string_call.notc
string returnsString() {
    return "klhlfgljk";
}

void main() {
    printDouble(returnsString);
}
